fix(navbar): fix cropped title when increasing zoom

--- a/src/components/interior-left-nav/_interior-left-nav.scss
+++ b/src/components/interior-left-nav/_interior-left-nav.scss
@@ -27,7 +27,7 @@
       list-style: none;
       display: flex;
       flex-direction: column;
-      background-color: $color__white;
+      background-color: green;
       padding-top: 1.5rem;
       overflow: auto;
 
@@ -196,7 +196,6 @@
     display: flex;
     flex-direction: column;
     width: rem(200px);
-    padding-top: rem(20px);
     transition: background-color 300ms $bx--standard-easing,
       width 300ms $bx--standard-easing;
 
@@ -227,7 +226,7 @@
     }
 
     .left-nav-list {
-      padding-top: 0;
+      padding-top: 0.625rem;
 
       @include light-ui {
         background-color: inherit;
